--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: wlanpi-wconsole
 Section: embedded
 Priority: optional
 Maintainer: Jiri Brejcha <jirka@jiribrejcha.net>
-Build-Depends: debhelper (>=9), build-essential
+Build-Depends: debhelper (>=9), build-essential, ser2net, hostapd
 Standards-Version: 3.9.8
 Homepage: https://github.com/WLAN-Pi/wlanpi-wconsole
 
