--- a/wlanpi-wconsole/etc/conf/hostapd.conf
+++ b/wlanpi-wconsole/etc/conf/hostapd.conf
@@ -1,59 +1,33 @@
 #
 # To run from CLI for debugging, use:
 #
-# /usr/sbin/hostapd -d -P /run/hostapd.wlan0.pid /etc/hostapd.conf
+# /usr/sbin/hostapd -d -P /run/hostapd.wlan0.pid /etc/hostapd/hostapd.conf
 #
 
 # WLAN SSID
 ssid=wifi_console
-
 # WPA PSK
 wpa_passphrase=wifipros
 
+# Set interface
+interface=wlan0
+
 # Channel setting
 channel=1
-
 # Mode options: a=5GHz / g=2.4GHz
 hw_mode=g
 
-interface=wlan0
-
-driver=nl80211
-
 # Set country code and enforce country limits
-#country_code=GB
-#ieee80211d=1
+country_code=GB
+ieee80211d=1
 
+# Enable PHYs
 ieee80211n=1
-
-beacon_int=100
-dtim_period=2
-
-max_num_sta=10
-
-# rts/ets threshold disabled
-rts_threshold=-1
-
-# fragmentation threshold disabled
-fragm_threshold=-1
-
-# basic & supported rates (x10)
-supported_rates=10 20 55 110 60 90 120 180 240 360 480 540
-basic_rates=60 120 240
-
-# disable mac filtering
-#macaddr_acl=0
-
-# 802.11 auth (bit 0 = open auth, bit 1 = shared key)
-auth_algs=1
-
-# broadcast SSID
-ignore_broadcast_ssid=0
-
-# enabled WMM to allow 11n etc supported
+ieee80211ac=1
 wmm_enabled=1
 
-# enable WPA2
+# Security: enable WPA2 & PSK
+auth_algs=1    # 1 = shared key
 wpa=2
 wpa_key_mgmt=WPA-PSK
 rsn_pairwise=CCMP
