--- a/install/etc/wlanpi-wconsole/conf/hostapd.conf
+++ b/install/etc/wlanpi-wconsole/conf/hostapd.conf
@@ -18,7 +18,7 @@ channel=1
 hw_mode=g
 
 # Set country code and enforce country limits
-country_code=GB
+country_code=US
 ieee80211d=1
 
 # Enable PHYs
