Enable BSS Load which advertises the number of connected clients

--- a/install/etc/wlanpi-wconsole/conf/hostapd.conf
+++ b/install/etc/wlanpi-wconsole/conf/hostapd.conf
@@ -31,3 +31,9 @@ auth_algs=1    # 1 = shared key
 wpa=2
 wpa_key_mgmt=WPA-PSK
 rsn_pairwise=CCMP
+
+# Enable BSS Load which advertises the number of connected clients      
+bss_load_update_period=50
+
+# Channel utilization does not seem to be supported by Intel AX210
+# chan_util_avg_period=600
