--- a/debian/control
+++ b/debian/control
@@ -2,17 +2,13 @@ Source: wlanpi-wconsole
 Section: embedded
 Priority: optional
 Maintainer: Jiri Brejcha <jirka@jiribrejcha.net>
-Build-Depends: debhelper (>=9), build-essential, ser2net, hostapd
+Build-Depends: debhelper (>=9), build-essential
 Standards-Version: 3.9.8
 Homepage: https://github.com/WLAN-Pi/wlanpi-wconsole
 
 Package: wlanpi-wconsole
 Architecture: any
 Multi-Arch: foreign
-Depends: ${misc:Depends},
-         ${shlibs:Depends},
-         hostapd,
-         isc-dhcp-server,
-         ser2net
+Depends: ${misc:Depends}, ${shlibs:Depends}, hostapd, isc-dhcp-server, ser2net
 Description: WLAN Pi wireless console mode
  WLAN Pi wireless console mode.
