add new default SSID & PSK

--- a/install/etc/wlanpi-wconsole/conf/hostapd.conf
+++ b/install/etc/wlanpi-wconsole/conf/hostapd.conf
@@ -5,9 +5,9 @@
 #
 
 # WLAN SSID
-ssid=wifi_console
+ssid=WLAN Pi Default SSID
 # WPA PSK
-wpa_passphrase=wifipros
+wpa_passphrase=WL@NP123
 
 # Set interface
 interface=wlan0
