Update description for debian/control

--- a/debian/control
+++ b/debian/control
@@ -10,5 +10,5 @@ Package: wlanpi-wconsole
 Architecture: any
 Multi-Arch: foreign
 Depends: ${misc:Depends}, ${shlibs:Depends}, hostapd, isc-dhcp-server, ser2net
-Description: WLAN Pi wireless console mode
+Description: WLAN Pi - wireless console mode
  WLAN Pi wireless console mode.
