Use 5 GHz channel 36 by default

--- a/install/etc/wlanpi-wconsole/conf/hostapd.conf
+++ b/install/etc/wlanpi-wconsole/conf/hostapd.conf
@@ -13,9 +13,9 @@ wpa_passphrase=WL@NP123
 interface=wlan0
 
 # Channel setting
-channel=6
+channel=36
 # Mode options: a=5GHz / g=2.4GHz
-hw_mode=g
+hw_mode=a
 
 # Set country code and enforce country limits
 country_code=US
