Now uses 2.4 GHz channel 1 instead of channel 36

--- a/install/etc/wlanpi-wconsole/conf/hostapd.conf
+++ b/install/etc/wlanpi-wconsole/conf/hostapd.conf
@@ -1,37 +1,43 @@
-#
-# To run from CLI for debugging, use:
-#
-# /usr/sbin/hostapd -d -P /run/hostapd.wlan0.pid /etc/hostapd/hostapd.conf
-#
-
 # WLAN SSID
 ssid=WLAN Pi Default SSID
 
-# WPA PSK
+# WPA-PSK
 wpa_passphrase=WL@NP123
 
-# Set interface
-interface=wlan0
+# Mode options: a = 5 GHz / g = 2.4 GHz
+hw_mode=g
 
-# Channel setting
-channel=36
-# Mode options: a=5GHz / g=2.4GHz
-hw_mode=a
+# Set 2.4 GHz channel - 1,6,11
+# Set 5 GHz channel - 36,40,44,48,149,153,157,161,165
+channel=1
 
-# Set country code and enforce country limits
+# Set Country Code (Use your own country code here)
 country_code=US
 ieee80211d=1
 
-# Enable PHYs
-ieee80211n=1
-ieee80211ac=1
-wmm_enabled=1
+# Set Interface and Driver to user
+interface=wlan0
+driver=nl80211
 
-# Security: enable WPA2 & PSK
+# IEEE 802.11n SETTINGS
+ieee80211n=1
+#ht_capab=[HT40+][SHORT-GI-20][SHORT-GI-40][DSSS_CCK-40]
+
+# IEEE 802.11ac SETTINGS
+ieee80211ac=1
+#vht_oper_chwidth=1
+vht_capab=[SU-BEAMFORMEE-1][HTC-VHT-1][VHT-LINK-ADAPT2][MAX-AMSDU-7935][GF]
+#vht_oper_centr_freq_seg0_idx=42
+
+# Set security parameters (WPA2-Personal here)
 auth_algs=1    # 1 = shared key
 wpa=2
 wpa_key_mgmt=WPA-PSK
 rsn_pairwise=CCMP
+
+# Enable WMM
+wmm_enabled=1
+uapsd_advertisement_enabled=1
 
 # Enable BSS Load which advertises the number of connected clients      
 bss_load_update_period=50
