--- a/install/etc/wlanpi-wconsole/conf/hostapd.conf
+++ b/install/etc/wlanpi-wconsole/conf/hostapd.conf
@@ -24,9 +24,9 @@ ieee80211n=1
 #ht_capab=[HT40+][SHORT-GI-20][SHORT-GI-40][DSSS_CCK-40]
 
 # IEEE 802.11ac SETTINGS
-ieee80211ac=1
+#ieee80211ac=1
 #vht_oper_chwidth=1
-vht_capab=[SU-BEAMFORMEE-1][HTC-VHT-1][VHT-LINK-ADAPT2][MAX-AMSDU-7935][GF]
+#vht_capab=[SU-BEAMFORMEE-1][HTC-VHT-1][VHT-LINK-ADAPT2][MAX-AMSDU-7935][GF]
 #vht_oper_centr_freq_seg0_idx=42
 
 # Set security parameters (WPA2-Personal here)
